--- a/src/assets/stylus/globals.styl
+++ b/src/assets/stylus/globals.styl
@@ -9,7 +9,6 @@ ul
 		padding    0
 		list-style none
 a
-	font-weight 700
 	&:hover,
 	&:focus,
 	&:active
@@ -24,7 +23,7 @@ h2
 p 
 	font-size .9em
 	line-height 1.2
-	padding 20px 0
+	padding 5px 0
 	
 body, html
 	font-family 'Open Sans', sans-serif
@@ -41,3 +40,5 @@ strong
 	font-weight 700
 img
 	max-width 100%
+em
+	color green
