--- a/src/assets/stylus/imports.styl
+++ b/src/assets/stylus/imports.styl
@@ -1,12 +1,62 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9bvs67');
-  src:  url('fonts/icomoon.eot?9bvs67#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9bvs67') format('truetype'),
-    url('fonts/icomoon.woff?9bvs67') format('woff'),
-    url('fonts/icomoon.svg?9bvs67#icomoon') format('svg');
-  font-weight: normal;
+    font-family: 'Open Sans';
+    src: local('Open Sans Light'), local('OpenSans-Light'),
+         url('../font/opensans/opensans-light.woff2') format('woff2'),
+         url('../font/opensans/opensans-light.woff') format('woff'),
+         url('../font/opensans/opensans-light.ttf') format('truetype');
   font-style: normal;
+  font-weight: 300;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src:
+     local('Open Sans'), local('OpenSans'),
+     url('../font/opensans/opensans-regular.woff2') format('woff2'),
+         url('../font/opensans/opensans-regular.woff') format('woff'),
+         url('../font/opensans/opensans-regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 400;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: 
+        local('Open Sans Bold'), local('OpenSans-Bold'),
+        url('../font/opensans/opensans-bold.woff2') format('woff2'),
+         url('../font/opensans/opensans-bold.woff') format('woff'),
+         url('../font/opensans/opensans-bold.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 700;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: 
+        local('Open Sans Extrabold'), local('OpenSans-Extrabold'),
+        url('../font/opensans/opensans-extrabold.woff2') format('woff2'),
+         url('../font/opensans/opensans-extrabold.woff') format('woff'),
+         url('../font/opensans/opensans-extrabold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: 
+        local('Open Sans Italic'), local('OpenSans-Italic'),
+        url('../font/opensans/opensans-italic.woff2') format('woff2'),
+         url('../font/opensans/opensans-italic.woff') format('woff'),
+         url('../font/opensans/opensans-italic.ttf') format('truetype');
+  font-style: italic;
+  font-weight: 400;
+}
+
+@font-face {
+    font-family: 'icomoon';
+    src:    url('../font/icomoon/fonts/icomoon.eot?en22i0');
+    src:    url('../font/icomoon/fonts/icomoon.eot?en22i0#iefix') format('embedded-opentype'),
+        url('../font/icomoon/fonts/icomoon.ttf?en22i0') format('truetype'),
+        url('../font/icomoon/fonts/icomoon.woff?en22i0') format('woff'),
+        url('../font/icomoon/fonts/icomoon.svg?en22i0#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
@@ -231,4 +281,5 @@
 .icon-woman1:before {
   content: "\e944";
 }
+
 
