--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,9 +1,227 @@
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 300;
+  src: url("../fonts/open-sans/hinted-OpenSans-Light.eot");
+  src: local("Open Sans"), url("../fonts/open-sans/hinted-OpenSans-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans/hinted-OpenSans-Light.woff2") format("woff2"), url("../fonts/open-sans/hinted-OpenSans-Light.woff") format("woff"), url("../fonts/open-sans/hinted-OpenSans-Light.ttf") format("truetype"), url("../fonts/open-sans/hinted-OpenSans-Light.svg#Open Sans") format("svg");
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 400;
+  src: url("../fonts/open-sans/hinted-OpenSans.eot");
+  src: local("Open Sans"), url("../fonts/open-sans/hinted-OpenSans.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans/hinted-OpenSans.woff2") format("woff2"), url("../fonts/open-sans/hinted-OpenSans.woff") format("woff"), url("../fonts/open-sans/hinted-OpenSans.ttf") format("truetype"), url("../fonts/open-sans/hinted-OpenSans.svg#Open Sans") format("svg");
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 600;
+  src: url("../fonts/open-sans/hinted-OpenSans-Semibold.eot");
+  src: local("Open Sans"), url("../fonts/open-sans/hinted-OpenSans-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans/hinted-OpenSans-Semibold.woff2") format("woff2"), url("../fonts/open-sans/hinted-OpenSans-Semibold.woff") format("woff"), url("../fonts/open-sans/hinted-OpenSans-Semibold.ttf") format("truetype"), url("../fonts/open-sans/hinted-OpenSans-Semibold.svg#Open Sans") format("svg");
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  src: url("../fonts/open-sans/hinted-OpenSans-Bold.eot");
+  src: local("Open Sans"), url("../fonts/open-sans/hinted-OpenSans-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/open-sans/hinted-OpenSans-Bold.woff2") format("woff2"), url("../fonts/open-sans/hinted-OpenSans-Bold.woff") format("woff"), url("../fonts/open-sans/hinted-OpenSans-Bold.ttf") format("truetype"), url("../fonts/open-sans/hinted-OpenSans-Bold.svg#Open Sans") format("svg");
+}
+html {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+  display: block;
+}
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+[hidden],
+template {
+  display: none;
+}
+a {
+  background: transparent;
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+b,
+strong {
+  font-weight: bold;
+}
+dfn {
+  font-style: italic;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+mark {
+  background: #ff0;
+  color: #000;
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sup {
+  top: -0.5em;
+}
+sub {
+  bottom: -0.25em;
+}
+img {
+  border: 0;
+}
+svg:not(:root) {
+  overflow: hidden;
+}
+figure {
+  margin: 1em 40px;
+}
+hr {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+}
+pre {
+  overflow: auto;
+}
+code,
+kbd,
+pre,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0;
+}
+button {
+  overflow: visible;
+}
+button,
+select {
+  text-transform: none;
+}
+button,
+html input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+button[disabled],
+html input[disabled] {
+  cursor: default;
+}
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+input {
+  line-height: normal;
+}
+input[type="checkbox"],
+input[type="radio"] {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+input[type="search"] {
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+}
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+legend {
+  border: 0;
+  padding: 0;
+}
+textarea {
+  overflow: auto;
+}
+optgroup {
+  font-weight: bold;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+td,
+th {
+  padding: 0;
+}
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
 body,
 html {
   padding: 0;
   font-size: 100%;
-  font-family: 'Ubuntu', sans-serif;
-  line-height: 1.5;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.3;
 }
 img {
   max-width: 100%;
