--- a/app/stylus/globals.styl
+++ b/app/stylus/globals.styl
@@ -10,8 +10,8 @@ body
 html
 	padding 0
 	font-size 100%
-	font-family: 'Ubuntu', sans-serif;
-	line-height 1.5
+	font-family: 'Open Sans', sans-serif;
+	line-height 1.3
 
 img
 	max-width 100%
